Fix footer overlapping elements

--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@ a {
 }
 
 .app {
-  padding: 0 1rem;
+  padding-bottom: 6rem;
   max-width: 1000px;
   margin: 0 auto;
 }
@@ -77,7 +77,7 @@ a {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 1rem 0 0 0;
+  padding: 1rem;
   gap: 1.5rem;
 }
 
